Updating with newly discovered field

--- a/TrackEditor/EditGeometryWidget.ui
+++ b/TrackEditor/EditGeometryWidget.ui
@@ -38,7 +38,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-434</y>
         <width>458</width>
         <height>1283</height>
        </rect>
@@ -1558,12 +1558,22 @@
          <item row="3" column="0">
           <widget class="QLabel" name="label_13">
            <property name="text">
-            <string>Unknown</string>
+            <string>AI Accuracy</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1" colspan="2">
-          <widget class="QLineEdit" name="leUnk05"/>
+         <item row="3" column="1">
+          <widget class="QSpinBox" name="sbAIAccuracy">
+           <property name="minimum">
+            <number>-65535</number>
+           </property>
+           <property name="maximum">
+            <number>65535</number>
+           </property>
+           <property name="singleStep">
+            <number>100</number>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
