--- a/TrackEditor/EditDataWidget.ui
+++ b/TrackEditor/EditDataWidget.ui
@@ -341,12 +341,12 @@
          <item row="10" column="1">
           <widget class="QLabel" name="label_28">
            <property name="text">
-            <string>unknown 5</string>
+            <string>AI accuracy</string>
            </property>
           </widget>
          </item>
          <item row="11" column="1">
-          <widget class="QLineEdit" name="leUnk05"/>
+          <widget class="QLineEdit" name="leAIAccuracy"/>
          </item>
          <item row="12" column="0">
           <widget class="QLabel" name="label_29">
