--- a/TrackEditor/EditGeometryWidget.ui
+++ b/TrackEditor/EditGeometryWidget.ui
@@ -38,7 +38,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-572</y>
+        <y>0</y>
         <width>458</width>
         <height>1419</height>
        </rect>
@@ -66,8 +66,11 @@
          </property>
          <item row="1" column="1">
           <widget class="QDoubleSpinBox" name="dsbPitch">
+           <property name="wrapping">
+            <bool>true</bool>
+           </property>
            <property name="minimum">
-            <double>-360.000000000000000</double>
+            <double>0.000000000000000</double>
            </property>
            <property name="maximum">
             <double>360.000000000000000</double>
@@ -90,8 +93,11 @@
          </item>
          <item row="1" column="0">
           <widget class="QDoubleSpinBox" name="dsbYaw">
+           <property name="wrapping">
+            <bool>true</bool>
+           </property>
            <property name="minimum">
-            <double>-360.000000000000000</double>
+            <double>0.000000000000000</double>
            </property>
            <property name="maximum">
             <double>360.000000000000000</double>
@@ -100,8 +106,11 @@
          </item>
          <item row="1" column="2">
           <widget class="QDoubleSpinBox" name="dsbRoll">
+           <property name="wrapping">
+            <bool>true</bool>
+           </property>
            <property name="minimum">
-            <double>-360.000000000000000</double>
+            <double>0.000000000000000</double>
            </property>
            <property name="maximum">
             <double>360.000000000000000</double>
