--- a/TrackEditor/EditSignWidget.ui
+++ b/TrackEditor/EditSignWidget.ui
@@ -46,8 +46,11 @@
       <layout class="QGridLayout" name="gridLayout">
        <item row="2" column="0">
         <widget class="QDoubleSpinBox" name="dsbYaw">
+         <property name="wrapping">
+          <bool>true</bool>
+         </property>
          <property name="minimum">
-          <double>-360.000000000000000</double>
+          <double>0.000000000000000</double>
          </property>
          <property name="maximum">
           <double>360.000000000000000</double>
@@ -107,8 +110,11 @@
        </item>
        <item row="2" column="2">
         <widget class="QDoubleSpinBox" name="dsbPitch">
+         <property name="wrapping">
+          <bool>true</bool>
+         </property>
          <property name="minimum">
-          <double>-360.000000000000000</double>
+          <double>0.000000000000000</double>
          </property>
          <property name="maximum">
           <double>360.000000000000000</double>
@@ -131,8 +137,11 @@
        </item>
        <item row="2" column="1">
         <widget class="QDoubleSpinBox" name="dsbRoll">
+         <property name="wrapping">
+          <bool>true</bool>
+         </property>
          <property name="minimum">
-          <double>-360.000000000000000</double>
+          <double>0.000000000000000</double>
          </property>
          <property name="maximum">
           <double>360.000000000000000</double>
