these spinboxes should wrap too

--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -74,6 +74,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="wrapping">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item>
@@ -93,6 +96,9 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="wrapping">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
